--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/atomiccraft/com/br/Comandos.java=UTF-8
+encoding//src/atomiccraft/com/br/MagnataLogin.java=UTF-8
 encoding//src/atomiccraft/com/br/Main.java=UTF-8
