--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,8 @@
 main: atomiccraft.com.br.Main
 name: MuMagnata
-version: 1.0.1
+version: 1.0
 author: Mushu949
+
+commands:
+    magnata:
+        description: ver o magnata atual.
