--- a/config.yml
+++ b/config.yml
@@ -40,7 +40,13 @@ msg-magnata-deslogou: "§2O magnata §f@magnata §2deslogou o servidor!"
 
 #Mensagem de quando o player usar o /magnata
 #Variaveis: @magnata = Magnata atual || @exmagnata = Magnata antigo, que perdeu a tag para o atual.
-msg-comando-magnata: "§2O magnata atual é: §f@exmagnata§2."
+msg-comando-magnata: "§2O magnata atual é: §f@exmagnata§2."#Mensagem de quando o player usar o /magnata
+
+#Variaveis: @magnata = Magnata atual || @exmagnata = Magnata antigo, que perdeu a tag para o atual.
+msg-null-comando-magnata: "§cNão existe magnata atualmente!"
+
+#Quando executado pelo console.
+ERRO01: "Apenas jogadores podem usar o comando solicitado!"
 
 #Comandos que o plugin ira usar para entregar os privilegios de magnata para o novo magnata.
 #Ex: Comandos-magnata-atual01: "manuaddp @magnata essential.warp.magnata"
